--- a/VisualCrypt.Desktop/App.xaml
+++ b/VisualCrypt.Desktop/App.xaml
@@ -6,13 +6,15 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-             
-               
-                <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/Colors.xaml" />
+
+
+                <!--<ResourceDictionary
+                    Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/Fonts.xaml" />
                 <ResourceDictionary
-                    Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/Accents/VisualCrypt.xaml" />
-                
+                    Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/Colors.xaml" />-->
+                <ResourceDictionary
+                    Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/VisualCryptColors.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
             <valueConverters:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
         </ResourceDictionary>
