--- a/VisualCrypt.Desktop.Shared/Styles/NotInUse/Controls.Buttons.xaml
+++ b/VisualCrypt.Desktop.Shared/Styles/NotInUse/Controls.Buttons.xaml
@@ -1,9 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-               
-                 >
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-   
 
     <Style x:Key="MetroFlatButton"
            TargetType="{x:Type Button}">
@@ -73,7 +70,7 @@
     <!-- style for default button -->
     <Style TargetType="{x:Type Button}"
            x:Key="MetroButton">
-      
+
         <Setter Property="MinHeight"
                 Value="25" />
         <Setter Property="FontWeight"
@@ -97,19 +94,17 @@
                 <ControlTemplate TargetType="Button">
                     <Grid>
                         <Border x:Name="Background"
-                                Background="{TemplateBinding Background}"
-                              />
+                                Background="{TemplateBinding Background}" />
                         <Border x:Name="Border"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                Background="{x:Null}"/>
+                                Background="{x:Null}" />
                         <Border x:Name="DisabledVisualElement"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                 Background="{DynamicResource ControlsDisabledBrush}"
                                 IsHitTestVisible="false"
-                                Opacity="0"
-                                />
+                                Opacity="0" />
                         <ContentPresenter x:Name="contentPresenter"
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                           RecognizesAccessKey="True"
@@ -119,8 +114,8 @@
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Grid>
                     <ControlTemplate.Triggers>
-                   
-                   
+
+
                         <Trigger Property="IsMouseOver"
                                  Value="True">
                             <Setter TargetName="Background"
@@ -157,5 +152,5 @@
         </Setter>
     </Style>
 
-  
+
 </ResourceDictionary>
