--- a/VisualCrypt.Desktop.Shared/Styles/NotInUse/Controls.CheckBox.xaml
+++ b/VisualCrypt.Desktop.Shared/Styles/NotInUse/Controls.CheckBox.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:System="clr-namespace:System;assembly=mscorlib"
-              >
+                    xmlns:System="clr-namespace:System;assembly=mscorlib">
 
     <!-- ********************************** CheckBoxStyle **********************************-->
     <!-- adapted from http://brianlagunas.com/free-metro-light-and-dark-themes-for-wpf-and-silverlight-microsoft-controls/ -->
@@ -21,7 +20,7 @@
                 Value="6,0,0,0" />
         <Setter Property="BorderThickness"
                 Value="1" />
-       
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
@@ -122,7 +121,7 @@
                                  Value="True">
                             <Setter TargetName="normal"
                                     Property="BorderBrush"
-                                    Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(Controls:ControlsHelper.FocusBorderBrush)}" />
+                                    Value="DeepPink" />
                         </Trigger>
                         <Trigger Property="FlowDirection"
                                  Value="RightToLeft">
@@ -133,7 +132,7 @@
                                 </Setter.Value>
                             </Setter>
                         </Trigger>
-                    
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
