--- a/VisualCrypt.Desktop/Views/ImportEncodingDialog.xaml
+++ b/VisualCrypt.Desktop/Views/ImportEncodingDialog.xaml
@@ -1,45 +1,47 @@
 ﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.Views.ImportEncodingDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-        xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
-        mc:Ignorable="d"
-        Title="Import With Encoding" Height="300" Width="500" WindowStartupLocation="CenterOwner"
-        d:DataContext="{d:DesignInstance views:AboutDialog}"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+                    xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
+                    mc:Ignorable="d"
+                    Title="Import With Encoding" Height="300" Width="500" WindowStartupLocation="CenterOwner"
+                    d:DataContext="{d:DesignInstance views:AboutDialog}"
                     Background="{DynamicResource BarColorBrush}">
     <controls:AppDialog.Resources>
-        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+        <ResourceDictionary
+            Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/DialogStyles.xaml" />
     </controls:AppDialog.Resources>
     <Border x:Name="DialogBorder" Padding="10">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0"></ColumnDefinition>
-                <ColumnDefinition Width="100*"></ColumnDefinition>
+                <ColumnDefinition Width="0" />
+                <ColumnDefinition Width="100*" />
             </Grid.ColumnDefinitions>
-            <Grid x:Name="SymbolCol" Grid.Column="0">
-            </Grid>
+            <Grid x:Name="SymbolCol" Grid.Column="0" />
             <Grid x:Name="MainCol" Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
-                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}"></TextBlock>
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
                         <TextBlock TextWrapping="Wrap">Use this when you see garbled characters when opening clear text files. This might happen when the file was created in another country.</TextBlock>
-                        <TextBlock></TextBlock>
+                        <TextBlock />
                         <TextBlock Text="The preselected Encoding is the default for your Windows version." />
-                        <TextBlock></TextBlock>
-                        <ComboBox ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncodingInfo}"
-                          DisplayMemberPath="DisplayName" d:DataContext="{d:DesignInstance views:ImportEncodingDialog}" />
+                        <TextBlock />
+                        <ComboBox ItemsSource="{Binding AvailableEncodings}"
+                                  SelectedItem="{Binding SelectedEncodingInfo}"
+                                  DisplayMemberPath="DisplayName"
+                                  d:DataContext="{d:DesignInstance views:ImportEncodingDialog}" />
                         <TextBlock TextWrapping="Wrap">The selected import Encoding will be preserved when you use File / Export Clear Text, otherwise UTF-8 without BOM would be used for export.</TextBlock>
 
                     </StackPanel>
                 </Grid>
                 <Grid x:Name="ButtonRow" Grid.Row="1">
-                  
+
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Click="ImportButton_Click" IsDefault="True">Import...</Button>
                         <Button Click="CancelButton_Click">Cancel</Button>
