--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -1,51 +1,50 @@
 ﻿<controls:AppDialog x:Class="VisualCrypt.Desktop.Views.SetPasswordDialog"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-                      xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
-                      mc:Ignorable="d"
-                      Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
-                      d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
-                      Background="{DynamicResource BarColorBrush}"
-                      >
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
+                    xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
+                    mc:Ignorable="d"
+                    Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
+                    d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
+                    Background="{DynamicResource BarColorBrush}">
     <controls:AppDialog.Resources>
-        <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+        <ResourceDictionary
+            Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/DialogStyles.xaml" />
     </controls:AppDialog.Resources>
     <Border x:Name="DialogBorder" Padding="10">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0"></ColumnDefinition>
-                <ColumnDefinition Width="100*"></ColumnDefinition>
+                <ColumnDefinition Width="0" />
+                <ColumnDefinition Width="100*" />
             </Grid.ColumnDefinitions>
-            <Grid x:Name="SymbolCol" Grid.Column="0">
-
-            </Grid>
+            <Grid x:Name="SymbolCol" Grid.Column="0" />
             <Grid x:Name="MainCol" Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
-                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}"></TextBlock>
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
                         <TextBlock TextWrapping="Wrap">The password or passphrase must have between 1 and 10 million Unicode characters. The 256 bit AES encryption key will be derived from the password using SHA-256 and Bcrypt hash algorithms.</TextBlock>
-                        <TextBlock></TextBlock>
+                        <TextBlock />
                         <TextBlock>Password, please type or paste:</TextBlock>
                         <PasswordBox Name="PwBox" PasswordChanged="Password_Changed" x:FieldModifier="private" />
                         <TextBlock>Password, please repeat:</TextBlock>
-                        <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed"  x:FieldModifier="private" />
+                        <PasswordBox Name="PwBox2" PasswordChanged="Password2_Changed" x:FieldModifier="private" />
 
                     </StackPanel>
                 </Grid>
                 <Grid x:Name="ButtonRow" Grid.Row="1">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Button  Content="Clear" Command="{Binding ClearPasswordCommand}"/>
+                        <Button Content="Clear" Command="{Binding ClearPasswordCommand}" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button  Content="Cancel" Click="Button_Click"/>
-                        <Button HorizontalAlignment="Right" Content="Set" x:Name="ButtonOk" IsDefault="True" Command="{Binding SetPasswordCommand}"/>
+                        <Button Content="Cancel" Click="Button_Click" />
+                        <Button HorizontalAlignment="Right" Content="Set" x:Name="ButtonOk" IsDefault="True"
+                                Command="{Binding SetPasswordCommand}" />
                     </StackPanel>
                 </Grid>
             </Grid>
