--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -9,10 +9,10 @@
                     Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
                     d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
                     Background="{DynamicResource BarColorBrush}">
-    <controls:AppDialog.Resources>
+    <Window.Resources>
         <ResourceDictionary
             Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/InUse/DialogStyles.xaml" />
-    </controls:AppDialog.Resources>
+    </Window.Resources>
     <Border x:Name="DialogBorder" Padding="10">
         <Grid>
             <Grid.ColumnDefinitions>
